styles/cart_page.css
.cart-rest-of-website {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.cart-and-summary {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 70%;
}

.checkout-cart {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 80%;
}

.order-summary {
    width: 20%;
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    padding: 10px; 
    border: 1px solid lightgray;
    background-color: #f9f9f9; 
    height: 50%;
}

.shopping-cart-grid {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 70%;
}

.shopping-cart-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    gap: 10px;
    width: 100%;
    flex-shrink: 0;
}

.shopping-cart-items-list {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.shopping-cart-item {
    display: flex;
    align-items: center;
    justify-content: space-between;
    padding: 15px 0;
    border-bottom: 1px solid lightgray;
    gap: 15px;
    font-weight: bold;
    width: 100%;
}

.shopping-cart-item:first-child {
    font-weight: bold;
    border-bottom: 2px solid black;
    padding: 15px 0;
}

.shopping-cart-item p {
    flex: 1;
    text-align: center;
    margin: 0;
}


.product-info {
    flex: 2;
    display: flex;
    align-items: center;
    gap: 10px;
}

.product-info img {
    width: 150px;
    height: 100px;
    object-fit: cover;
}
.quantity-info {
    flex: 1;
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: 0;
}


.quantity-square {
    display: flex;
    justify-content: center;
    align-items: center;
    height: 40px;
    width: 40px;
    border-width: 1px;
    border-style: solid;
    border-radius: 50%;
    border-color: lightgray;
    background-color: wheat;
    margin: 0;
    padding: 0;
}

.quantity-square p {
    margin: 0;
    padding: 0;
    line-height: 1;
    text-align: center;
    flex-shrink: 0;
    width: 20px;
  }

.remove-button {
    flex: 0.5; 
    text-align: center;
    color: red; 
    cursor: pointer;
    font-weight: bold;
}

.remove-button:hover {
    color: darkred; 
    text-decoration: underline;
}


.price-tag {
    flex: 1;
    text-align: center;
}

